package week4;

public class TestMachine {

    public static void main(String[] args) {
        Machine RSQF = new Machine();
        System.out.println(RSQF);
        RSQF.processB();
        System.out.println(RSQF);
        RSQF.processB();
        System.out.println(RSQF);
        RSQF.processB();
        System.out.println(RSQF);
    }
}
